--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -87,35 +87,35 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="15dp"
-                android:gravity="right"
                 >
 
                 <TextView
                     android:id="@+id/AddToCartBtn"
-                    android:layout_width="0dp"
+                    android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:text="Add To Cart"
-                    android:layout_weight="1"
                     android:background="@drawable/banner_button"
                     android:textColor="@color/white"
                     android:gravity="center"
                     android:textSize="12sp"
                     android:textStyle="bold"
                     android:padding="7dp"
+                    android:visibility="visible"
+                    android:layout_gravity="right"
                     />
                 <TextView
                     android:id="@+id/GoToCartBtn"
-                    android:layout_width="0dp"
+                    android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:text="Go To Cart"
-                    android:layout_weight="1"
                     android:background="@drawable/go_to_cart"
                     android:textColor="@color/white"
                     android:gravity="center"
                     android:textSize="12sp"
                     android:textStyle="bold"
                     android:padding="7dp"
-                    android:visibility="invisible"
+                    android:layout_gravity="right"
+                    android:visibility="gone"
                     />
 
 
