--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -125,6 +125,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight=".2"
                             android:src="@drawable/go"
+                            android:foreground="?attr/selectableItemBackground"
 
                             />
 
