--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -28,7 +28,7 @@
                 >
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/backBtn"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_weight="20"
@@ -47,7 +47,7 @@
                     />
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/editBtn"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/edit"
@@ -63,7 +63,7 @@
                 android:src="@drawable/user_pic" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/displayName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -74,7 +74,7 @@
                 />
 
             <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/displayNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -102,7 +102,7 @@
                     />
 
                 <TextView
-                    android:id="@+id/textView10"
+                    android:id="@+id/displayLocation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -117,6 +117,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:id="@+id/odersBtn"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="15dp"
@@ -144,6 +145,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/settingsBtn"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="15dp"
@@ -171,6 +173,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/logoutBtn"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="15dp"
