--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -117,7 +117,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/odersBtn"
+                    android:id="@+id/ordersBtn"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="15dp"
